.nx/cache/terminalOutputs/5040826036843721450
> vite

[2m5:00:51 PM[22m [36m[1m[vite][22m[39m [90m[2m(client)[22m[39m Forced re-optimization of dependencies

  [32m[1mVITE[22m v6.3.5[39m  [2mready in [0m[1m137[22m[2m[0m ms[22m

  [32m➜[39m  [1mLocal[22m:   [36mhttp://localhost:[1m4201[22m/[39m
  [32m➜[39m  [1mNetwork[22m: [36mhttp://172.31.155.91:[1m4201[22m/[39m
  [32m➜[39m  [1mNetwork[22m: [36mhttp://10.0.0.2:[1m4201[22m/[39m
[2m[32m  ➜[39m[22m[2m  press [22m[1mh + enter[22m[2m to show help[22m













[1;1H[0J[2m5:00:52 PM[22m [31m[1m[vite][22m[39m [31mInternal server error: Failed to load PostCSS config (searchPath: /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2): [Error] Loading PostCSS Plugin failed: Cannot find module '@pandacss/dev/postcss'
Require stack:
- /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js

(@/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '@pandacss/dev/postcss'
Require stack:
- /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js

(@/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js)
    at load (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11776:11)
    at async Promise.all (index 0)
    at async plugins (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11805:12)
    at async processResult (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11876:14)[39m
  Plugin: [35mvite:css[39m
  File: [36m/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/src/styles.css?direct[39m
[2m5:00:53 PM[22m [36m[1m[vite][22m[39m [90m[2m(client)[22m[39m [32m✨ new dependencies optimized: [33m__mf__virtual/app2__mf_v__runtimeInit__mf_v__.js, __mf__virtual/app2__prebuild__react__prebuild__.js, __mf__virtual/app2__prebuild__react_mf_2_dom__prebuild__.js[32m[39m
[2m5:00:53 PM[22m [36m[1m[vite][22m[39m [90m[2m(client)[22m[39m [32m✨ optimized dependencies changed. reloading[39m













[1;1H[0J[2m5:00:53 PM[22m [31m[1m[vite][22m[39m [31mInternal server error: Failed to load PostCSS config (searchPath: /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2): [Error] Loading PostCSS Plugin failed: Cannot find module '@pandacss/dev/postcss'
Require stack:
- /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js

(@/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '@pandacss/dev/postcss'
Require stack:
- /Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js

(@/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/postcss.config.js)
    at load (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11776:11)
    at async Promise.all (index 0)
    at async plugins (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11805:12)
    at async processResult (file:///Users/snapp/Documents/Projects/mfe-apps/my-org/node_modules/.pnpm/vite@6.3.5_@types+node@20.19.11_jiti@2.4.2_terser@5.43.1_yaml@2.8.1/node_modules/vite/dist/node/chunks/dep-DBxKXgDP.js:11876:14)[39m
  Plugin: [35mvite:css[39m
  File: [36m/Users/snapp/Documents/Projects/mfe-apps/my-org/apps/app-2/src/styles.css?direct[39m
^C